# auto_aim

src/sp_vision_msgs/: CMakeLists.txt  package.xml
src/sp_vision_msgs/msg/: Armor.msg  Armors.msg  Chassis.msg  DebugBack.msg  DebugInfo.msg  EnemyPosition.msg  EnemyPositions.msg  EnemyState.msg  EnemyStates.msg  FrontDebug.msg  GimbalCmd.msg  GimbalState.msg  Imu.msg  Measurement.msg  MultiState.msg  Operator.msg  OperatorCommand.msg  RuneTarget.msg  SelfState.msg  Target.msg  TargetState.msg  UICircle.msg  UIMsg.msg  UIRect.msg
src/sp_vision_msgs/srv/: EnemyStrategist.srv
src/sp_vision_ros/: CMakeLists.txt  package.xml
src/sp_vision_ros/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  tracker.cpp  tracker.hpp  yolo.cpp  yolo.hpp
src/sp_vision_ros/auto_aim/multithread/: commandgener.hpp  mt_detector.hpp
src/sp_vision_ros/auto_aim/planner/: planner.cpp  planner.hpp
src/sp_vision_ros/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
src/sp_vision_ros/config/: ascento.yaml  calibration.yaml  demo.yaml  launch_params.yaml  standard3.yaml  standard4.yaml
src/sp_vision_ros/config/params/: armor_solver_params.yaml  auto_aim_params.yaml  camera_params.yaml  gimbal_params.yaml
src/sp_vision_ros/include/sp_vision_ros/: armor_solver_node.h  auto_aim_node.h  camera_node.h  gimbal_node.h
src/sp_vision_ros/io/: CMakeLists.txt  camera.cpp  camera.hpp
src/sp_vision_ros/io/gimbal/: gimbal.cpp  gimbal.hpp
src/sp_vision_ros/io/serial/src/: serial.cc
src/sp_vision_ros/io/serial/src/impl/: unix.cc
src/sp_vision_ros/io/serialPro/: CMakeLists.txt
src/sp_vision_ros/io/serialPro/example/: msg_serializer_test.cpp  robot_serial_listen_test.cpp  robot_serial_test.cpp
src/sp_vision_ros/io/serialPro/include/serialPro/: robotComm.h  serialPro.h
src/sp_vision_ros/io/serialPro/msg_serializer/: listener.h
src/sp_vision_ros/io/serialPro/src/: RobotComm.cpp
src/sp_vision_ros/launch/: ap_vision_auto_aim.py  ap_vision_solver.py  sp_vision_bringup.launch.py
src/sp_vision_ros/src/: armor_solver_node.cpp  auto_aim_node.cpp  camera_node.cpp  gimbal_node.cpp
src/sp_vision_ros/tools/: CMakeLists.txt  crc.cpp  extended_kalman_filter.hpp  kalman_debug.cpp  kalman_debug.hpp  math_tools.cpp  thread_pool.hpp  timer.cpp  timer.hpp
